# WatchPi

./: LICENSE  README.md
Mechanical/: WatchPi-Case-Printable.stl
Software/: CMakeLists.txt  main.c
Software/lib/Fonts/: FontRoboto16.c  FontRoboto20.c  FontRoboto30.h  FontRoboto50.c  FontRoboto60.c  FontRoboto64.h  FontRobotoMono105.c  FontRobotoMono107.c  FontRobotoMono112.c  FontRobotoMono115.c  FontRobotoMono15.c  FontRobotoMono18.c  FontRobotoMono20.c  FontRobotoMono22.c  FontRobotoMono24.c  FontRobotoMono27.c  FontRobotoMono30.c  FontRobotoMono33.c  FontRobotoMono58.c  FontRobotoMono63.c  FontRobotoMono69.c  FontRobotoMono73.c  FontRobotoMono78.c  FontRobotoMono83.c  FontRobotoMono89.c  FontRobotoMono93.c  FontRobotoMono98.c  fonts.h
Software/lib/GUI/: GUI_Paint.c  GUI_Paint.h
Software/lib/LCD/: LCD_1in28.c
Software/uf2/: GameOnWatch.uf2
